[package]
name = "rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.7" ,default-features = false,features = ["macros"] }
bit_field = "0.10.2"
preprint  = "0.1.0"
[features]
default = ["goldfish",]
starfive = []
goldfish = []
